[package]
name = "life"
version = "0.1.0"
authors = ["Eduardo <eduarch42@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {git = "https://github.com/not-fl3/macroquad"}
bit-vec = "0.6.2"
rand = {version = "0.7.3", features = ["getrandom"]}
